@@ -28,11 +28,11 @@ endif
 endif
 
 if ENABLE_CHECK_SPR
-EXTRA_TEST_IMPL += spr+seq-host-host-seqc
 if ENABLE_CHECK_SPR_MTA
 EXTRA_TEST_IMPL += spr+mta-mtalpha-sim
 EXTRA_TEST_IMPL += spr+mta+seq-mtalpha-sim
 endif
+# add extra implementations here when they become available
 endif
 
 if ENABLE_CHECK_UTC
